--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "switch",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/kiki-do/switch",
+  "homepage": "https://kiki-do.github.io/switch/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
